# panw-api-ollama

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker-publish-multi-platform.yml
config-examples/: PANW.llama2-uncensored_latest-1747909321539.json
docker/: README.md  docker-compose.apple.yaml  docker-compose.win.yaml  docker-compose.yaml
docker/data/open-webui/: config.json
src/: config.rs  main.rs  ollama.rs  security.rs  stream.rs  types.rs
src/handlers/: chat.rs  embeddings.rs  generate.rs  mod.rs  models.rs  passthrough.rs  utils.rs
tests/: smoke.rs
