[package]
name = "panw-api-ollama"
version = "0.15.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tower-http = { version = "0.6.6", features = ["trace"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
thiserror = "1.0.69"
bytes = "1.10.1"
async-stream = "0.3.6"
http-body-util = "0.1.3"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
pin-project = "1.1.10"
